	  the output file extension gets changed when the user modifies the output file type.
	- Removed the now unused src/Fl_mac.cxx
	- Fixed various Mac specific opengl issues (STR #2944)
        - Added new method Fl_Widget::top_window() (STR #2948)
        - Added new method Fl_Widget::top_window_offset() (part of STR #2944)

CHANGES IN FLTK 1.3.2

	- Removed unnecessary drawing calls (STR #2898)
        - Fixed regression in FLTK 1.3.1 for unbundled Mac OS FLTK applications that
	  did not appear in dock nor have a menu bar (STR #2890).
        - Fl_Table::clear() now calls table->clear() for consistency. (STR #2889)
	- Fixed Fl_Scroll widget that fails under Mac OS X 10.8 and retina display (STR #2887).
	- Prevents scrollbars from drawing when widget is sized too small to be visible (STR #2886).
	- Documented how to make a Mac OS X FLTK application launchable by dropping files on its icon.
	- Fixed a Mac-specific issue appeared with OS 10.8 (Mountain Lion): long delay before
	  opening when the application is started by dragging a file on the application icon.
	- Fixed use of PNG image from in-memory data (STR #2884).
	- Added static Fl_RGB_Image::max_size(size_t) to limit the maximum memory size allowed to
	  RGB images (STR #2881).

CHANGES IN FLTK 1.3.1

	- Fixed utf_strncasecmp and utf_strcasecmp
	- Moved all inline constructors into source file to avoid bad DLLs
	- Fixed Fl_Widget::copy_label() and Fl_Window::copy_label() when
	  called with the old label() (STR #2836)
	- Fixed Fl_Input_::maximum_size() documentation and replace() method
	  to honor maximum_size() as number of allowed characters (STR #2747).
	- Fixed a potential crash if Fl_Double_Window::flush() was called
	  before show()
	- Fixed regression (in FLTK 1.3.0) that could clear a radio
	  button by using the keyboard (space or shortcut) (STR #2748)
	- Fixed fl_pie() drawing too small on X11 (STR #2703)
	- Fixed Fl_Menu issue with unusual menu flags (STR #2680)